blue color and map

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -60,8 +60,8 @@
     color:#fff;
     .slick-current{
         .dots-box{
-            border-top: 2px solid $green;
-            border-bottom: 2px solid $green;
+            border-top: 2px solid $blue;
+            border-bottom: 2px solid $blue;
         }
     }
 }
