--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -176,4 +176,14 @@
     bottom: 30px;
     z-index: 3;
 }
+.line-animation{
+    stroke-dashoffset: 600;
+    stroke-dasharray: 600;
+    animation: animatedmap 5s infinite 5s;
+}
+@keyframes animatedmap{
+    to{
+        stroke-dashoffset:0;
+    }
+}
 //@import "media";
