fixed logo and animation

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,3 +1,5 @@
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
 /* Document
    ========================================================================== */
 
@@ -468,6 +470,13 @@ template {
 
 @charset "UTF-8";
 
+/*!
+ * animate.css -https://daneden.github.io/animate.css/
+ * Version - 3.7.2
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ *
+ * Copyright (c) 2019 Daniel Eden
+ */
 
 @-webkit-keyframes bounce {
   from,
@@ -573,6 +582,7 @@ template {
   animation-name: flash;
 }
 
+/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes pulse {
   from {
@@ -3308,6 +3318,7 @@ template {
   animation-name: jackInTheBox;
 }
 
+/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollIn {
   from {
@@ -3342,6 +3353,7 @@ template {
   animation-name: rollIn;
 }
 
+/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes rollOut {
   from {
