--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -180,11 +180,27 @@
 .line-animation{
     stroke-dashoffset: 600;
     stroke-dasharray: 600;
-    animation: animatedmap 5s infinite 5s;
+    animation: animatedmap 7s infinite 5s;
+}
+.line-animation2{
+    stroke-dashoffset: 600;
+    stroke-dasharray: 600;
+    animation: animatedmap 7s infinite 5s;
+}
+.line-animation3{
+    stroke-dashoffset: 900;
+    stroke-dasharray: 900;
+    animation: animatedmap 7s infinite 5s;
+}
+.line-animation4{
+    stroke-dashoffset: 650;
+    stroke-dasharray: 650;
+    animation: animatedmap 7s infinite 5s;
 }
 @keyframes animatedmap{
     to{
         stroke-dashoffset:0;
     }
 }
+//class="animated flipInX delay-4s"
 //@import "media";
