--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,10 +1,13 @@
 body{
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
+    background-color: #201208;
+    color: #FFFFFF;
 }
 a{
     display: inline-block;
     text-decoration: none;
+    color: #FFFFFF;
 }
 ul, li{
     list-style-type: none;
