--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -106,6 +106,7 @@
     top: 0;
     left: 0;
     z-index: 4;
+    transform: translateX(-20px);
 }
 .logo{
     padding: 0px 0px 40px 0px;
@@ -202,5 +203,29 @@
         stroke-dashoffset:0;
     }
 }
-//class="animated flipInX delay-4s"
+.surfing{
+    padding: 160px 0 210px;
+}
+.title{
+    text-transform: uppercase;
+    span{
+        display: inline-block;
+        position: relative;
+        font-size: 200px;
+        font-weight: 800;
+        color: rgba(57, 146, 247, 0.02);
+        transform: translateX(-50px);
+    }
+    h3{
+        border-top: 1px solid $blue;
+        border-bottom: 1px solid $blue;
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 80px;
+        margin: 0;
+        color: #fff;
+    }
+}
+
 //@import "media";
