--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -57,3 +57,21 @@ ul, li{
         opacity: 0.5;
     }
 }
+.btn{
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 36px;
+    font-weight: 400;
+    padding: 0px 17px;
+    border: 2px solid $blue;
+    display: inline-block;
+    background: rgba(#1C2121, .50);
+    transition: .4s;
+    span{
+        font-weight: 100;
+    }
+    &:hover{
+        box-shadow: 0px 0px 30px $blue;
+        padding: 5px 25px;
+    }
+}
