--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -204,8 +204,13 @@
         stroke-dashoffset:0;
     }
 }
+ // SPORT
 .sport{
-    padding: 160px 0 110px;
+    padding: 160px 0 0px;
+    margin: 0 0 110px 0;
+    background: url(../img/sport-bg.jpg) 0 0 no-repeat;
+    background-size: cover;
+    position: relative;
 }
 .title{
     text-transform: uppercase;
@@ -227,8 +232,7 @@
         margin: 0;
         color: #fff;
     }
-}
-    // SPORT
+}  
 .sport__subtitle{
     display: flex;
     justify-content: flex-end;
@@ -307,7 +311,7 @@
     display: none;
 }
 .slider-map{
-    max-width: 1200px;
+    max-width: 1400px;
     min-height: 635px;
     background-image: url(../img/sport-map.png);
     background-repeat: no-repeat;
@@ -320,24 +324,94 @@
     .slick-current{
         .slider-dots__content{
             display: block;
+            width: 285px;
+            padding: 28px 31px 31px 32px;
         }
     }
+}
+.slider-dots__content-row{
+    display: flex;
+    justify-content: space-between;
+}
+.slider-dots__content-item{
+    text-align: center;
+    img{
+        margin: 0px 0px 7px 0px;
+    }
+}
+.slider-dots__content-number{
+    font-weight: 800;
+    line-height: 12px;
+    font-size: 16px;
+}
+.slider-dots__content-name{
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 12px;
+}
+.slider-dots__content-title{
+    text-transform: uppercase;
+    font-weight: 800;
+    line-height: 26px;
+    font-size: 18px;
+    padding: 8px 0px 8px 0px; 
+    margin: 0px 0px 18px 0px;
+    border-bottom: 1px solid $blue;
+    border-top: 1px solid $blue;
+    position: relative;
+}
+.slider-dots__content-subtitle{
+    font-size: 16px;
+    line-height: 19px;
+    margin: 0px 0px 30px 0px;
+    padding: 0px 0px 0px 0px; 
+}
+.slider-dots__content-link{
+    padding: 10px 0px 0px 0px;
 }
 .slider-dots{
     position: relative;
 }
 .slider-dots__circle{
     width: 24px;
-    height: 24px;
+    height: 23px;
     background-color: $blue;
     border-radius: 50%;
+    &:hover{
+        box-shadow: 0px 0px 35px $blue;
+    }
 }
 .slider-dots__content{
-    display: none;
+    display: none;  
+    background-color: rgba(0, 0, 0, 0.308);
+    border-radius: 10px;
+    position: absolute;
+    bottom: 35px;
+    transform: translateX(-50%);
+    &::before{
+        content:'';
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-bottom: 20px solid $blue;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+        bottom: -20px;
+        left: 50%;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
 }
 .slider-dots--au{
-    top: 335px;
-    left: 0;
+    top: 340px;
+    left: 35px;
+    .slider-dots__content{
+        transform: translateX(0);
+        &::before{
+            content:'';
+            left: 0;
+        }
+    }
 }
 .slider-dots--sp{
     top: 270px;
@@ -378,4 +452,12 @@
 .slider-dots--fi{
     top: 470px;
     left: 95px;
+    .slider-dots__content{
+        transform: translateX(-93%);
+        &::before{
+            content:'';
+            left: auto;
+            right: 0;
+        }
+    }
 }
