--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,595 +1,7 @@
 @import "vars";
 @import "libs";
-//@import "fonts";
 @import "global";
-
-.header{ 
-    position: relative;
-    height: 100vh;
-}
-.header__slider{
-    &-item{
-        height: 100vh;
-        background: url(../img/header-bg.jpg)0 0 no-repeat;
-        background-size: cover;
-        position: relative;
-    }  
-}
-.slider-item__info{
-    position: absolute;
-    right: 80px;
-    bottom: 116px;
-    text-align: right;
-    color: #FFFFFF;
-    text-transform: uppercase;
-}
-.slider-item__info-suptitle{
-    margin: 0px 0px 5px 0px;
-}
-.slider-item__info-suptext{
-    margin: 0px 0px 8px 0px;
-}
-.slider-item__info-title{
-    font-weight: 800;
-    font-size: 80px;
-    line-height: 86px;
-    margin: 0px 0px 48px 0px;
-}
-.slider-item__info-text{
-    font-weight: 800;
-    font-size: 40px;
-    line-height: 45px;
-    margin: 0px 0px 20px 0px;
-}
-.slider-arrows{
-    position: absolute;
-    top: 40px;
-    right: 80px;
-    cursor: pointer;
-    z-index: 4;
-}
-.slider-arrows__left{
-    right: 125px;
-}
-.slider-dotshead{
-    position: absolute;
-    right: 50px;
-    bottom: 40px;
-    max-width: 920px;
-    width: 100%;
-    color:#fff;
-    .slick-current{
-        .dots-box{
-            border-top: 2px solid $blue;
-            border-bottom: 2px solid $blue;
-        }
-    }
-}
-.dots-box{
-    width: 200px;
-    display: flex;
-    justify-content: space-between;
-    height: 28px;
-    align-items: center;
-    border-top: 4px solid #fff;
-    padding: 6px 0px 5px 0px;
-    &__number{
-        font-weight: 800;
-        font-size: 24px;
-        line-height: 34px;
-    }
-    &__name{
-        font-weight: 300;
-        line-height: 19px;
-        color: #FFFFFF;
-        opacity: 0.8;
-    }
-}
-.header__aside{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 5;
-    border-right: 1px solid rgba(255, 255, 255, 0.26);
-    height: 100%;
-    color:#fff;
-}
-.header__title{
-    position: absolute;
-    max-width: 500px;
-    font-family: Fira Sans;
-    font-weight: 800;
-    font-size: 200px;
-    line-height: 156px;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    opacity: 0.07;
-    top: 0;
-    left: 0;
-    z-index: 4;
-    transform: translateX(-20px);
-}
-.logo{
-    padding: 0px 0px 40px 0px;
-}
-.menu {
-    &__list {
-        text-align: center;
-    }
-    a{
-        color: #fff;
-    }
-    span{
-        display: block;
-        font-size: 12px;
-        line-height: 14px;
-        letter-spacing: 3px;
-        font-weight: 500;
-        padding: 5px 0px 0px 0px;
-        margin: 0px 0px 20px 0px;
-    }
-}
-.header__search{
-    text-align: center;
-    margin: 20px 0px 20px 0px;
-}
-.header__date{
-    text-align: center;
-    font-size: 72px;
-    line-height: 64px;
-    text-transform: uppercase;
-    font-weight: 800;
-    span{
-        letter-spacing: 1.4px;
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 19px;
-        display: block;
-        margin: 17px 0px 30px 0px;
-    }
-}
-.header__location{
-    text-align: center;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 1.1px;
-    font-weight: 300;
-    position: relative;
-    padding: 0px 25px 19px 0px;
-    margin: 0px 0px 47px 40px;
-    &:before{
-        content:"";
-        position: absolute;
-        width: 11px;
-        height: 13px;
-        background: url(../img/POI.svg) no-repeat ;
-        left: 0;
-        top: 0;
-    }
-}
-.header__map{
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 3;
-}
-.header__arrows{
-    position: absolute;
-    left: 210px;
-    bottom: 30px;
-    z-index: 3;
-}
-.line-animation{
-    stroke-dashoffset: 600;
-    stroke-dasharray: 600;
-    animation: animatedmap 7s infinite 5s;
-}
-.line-animation2{
-    stroke-dashoffset: 600;
-    stroke-dasharray: 600;
-    animation: animatedmap 7s infinite 5s;
-}
-.line-animation3{
-    stroke-dashoffset: 900;
-    stroke-dasharray: 900;
-    animation: animatedmap 7s infinite 5s;
-}
-.line-animation4{
-    stroke-dashoffset: 650;
-    stroke-dasharray: 650;
-    animation: animatedmap 7s infinite 5s;
-}
-@keyframes animatedmap{
-    to{
-        stroke-dashoffset:0;
-    }
-}
- // SPORT
-.sport{
-    padding: 160px 0 70px;
-    background: url(../img/sport-bg.jpg) 0 0 no-repeat;
-    background-size: cover;
-    position: relative;
-    border-top: 1px solid rgba(255,255,255,0.26);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.26);
-}
-.title{
-    text-transform: uppercase;
-    span{
-        display: inline-block;
-        position: relative;
-        font-size: 200px;
-        font-weight: 800;
-        color: #ffffff10;
-        transform: translateX(-50px);
-    }
-    h3{
-        border-top: 1px solid $blue;
-        border-bottom: 1px solid $blue;
-        position: absolute;
-        top: 0;
-        right: 178px;
-        font-size: 80px;
-        margin: 0;
-        color: #fff;
-    }
-}  
-.subtitle{
-    width: 500px;
-    text-align: right;    
-}
-.sport__subtitle{
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 80px;
-    margin-top: -80px;
-        .suptitle-left{
-            &::before{
-                content: "";
-                position: absolute;
-                width: 80px;
-                height: 1px;
-                background-color: #fff;
-                left: 0;
-                top: 50%;
-            }
-        }
-}
-.sport-box{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 750px;
-}
-.sport-slider{
-    padding: 70px 0px 0px 0px;
-    .slider-arrows{
-        top: 0px;
-    }
-    .slick-slide:nth-child(4n+1){
-        .sport-box{
-            margin: 90px 0 0 0;
-        }
-    }
-    .slick-slide:nth-child(4n+3){
-        .sport-box{
-            margin: 30px 0 0 0;
-        }
-    }
-
-    .slick-current{
-        .btn-box{
-            display: block;
-        }
-        .sport-box__inner{
-            background: rgba(#1C2121, .20);
-        }
-    }
-}
-.sport-box__inner{
-    min-height: 750px;
-    background: rgba(#1C2121, .80);
-    position: relative;
-    left: 0;
-    bottom: 0;
-    transition: all .5s;
-    &:hover{
-        background: rgba(#1C2121, .30);
-        .btn-box{
-            display: block;
-        }
-    }
-}
-.sport-box__inner-title{
-    text-transform: uppercase;
-    font-size: 40px;
-    line-height: 36px;
-    font-weight: 800;
-    padding: 70px 0 0 40px;
-    background-color: rgba(74, 154, 246, 0.198);
-}
-.sport-box__inner-title-location{
-    font-size: 18px;
-    line-height: 22px;
-    letter-spacing: 8px;
-    transform: rotate(-90deg);
-    position: absolute;
-    left: 220px;
-    bottom: 150px;
-    width: 0;
-    height: 0;
-    white-space: nowrap;
-    span{
-        font-weight: 100;
-    }
-}
-.btn-box{
-    bottom: 0;
-    position: absolute;
-    text-align: center;
-    left: 0;
-    right: 0;
-    display: none;
-}
-.slider-map{
-    max-width: 1400px;
-    min-height: 635px;
-    background-image: url(../img/sport-map.png);
-    background-repeat: no-repeat;
-    background-size: center;
-    background-position: center;
-    margin: 0 auto;
-    .slick-list{
-        min-height: 635px;
-    }
-    .slick-current{
-        .slider-dots__content{
-            display: block;
-            width: 285px;
-            padding: 28px 31px 31px 32px;
-        }
-    }
-}
-.slider-dots__content-row{
-    display: flex;
-    justify-content: space-between;
-}
-.slider-dots__content-item{
-    text-align: center;
-    img{
-        margin: 0px 0px 7px 0px;
-    }
-}
-.slider-dots__content-number{
-    font-weight: 800;
-    line-height: 12px;
-    font-size: 16px;
-}
-.slider-dots__content-name{
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 12px;
-}
-.slider-dots__content-title{
-    text-transform: uppercase;
-    font-weight: 800;
-    line-height: 26px;
-    font-size: 18px;
-    padding: 8px 0px 8px 0px; 
-    margin: 0px 0px 18px 0px;
-    border-bottom: 1px solid $blue;
-    border-top: 1px solid $blue;
-    position: relative;
-}
-.slider-dots__content-subtitle{
-    font-size: 16px;
-    line-height: 19px;
-    margin: 0px 0px 30px 0px;
-    padding: 0px 0px 0px 0px; 
-}
-.slider-dots__content-link{
-    padding: 10px 0px 0px 0px;
-}
-.slider-dots{
-    position: relative;
-}
-.slider-dots__circle{
-    width: 24px;
-    height: 23px;
-    background-color: $blue;
-    border-radius: 50%;
-    &:hover{
-        box-shadow: 0px 0px 35px $blue;
-    }
-}
-.slider-dots__content{
-    display: none;  
-    background-color: rgba(0, 0, 0, 0.308);
-    border-radius: 10px;
-    position: absolute;
-    bottom: 35px;
-    transform: translateX(-50%);
-    &::before{
-        content:'';
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-bottom: 20px solid $blue;
-        border-left: 12px solid transparent;
-        border-right: 12px solid transparent;
-        bottom: -20px;
-        left: 50%;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-    }
-}
-.slider-dots--au{
-    top: 340px;
-    left: 35px;
-    .slider-dots__content{
-        transform: translateX(0);
-        &::before{
-            content:'';
-            left: 0;
-        }
-    }
-}
-.slider-dots--sp{
-    top: 270px;
-    left: 0;
-}
-.slider-dots--ba{
-    top: 300px;
-    left: 25px;
-    .slider-dots__click{
-        text-transform: uppercase;
-        font-weight: bold;
-        opacity: .50;
-        font-size: 18px;
-        padding-bottom: 10px;
-    }
-}
-.slider-dots--mi{
-    top: 470px;
-    left: -25px;
-}
-.slider-dots--br{
-    top: 230px;
-    left: -60px;
-    &::before{
-        content:"";
-        position: absolute;
-        background: url(../img/mini-icon.png);
-        width: 14px;
-        height: 17px;
-        background-size: cover;
-        right: 150px;
-        top: -25px;
-    }
-}
-.slider-dots--cu{
-    top: 550px;
-    left: -125px;
-}
-.slider-dots--in{
-    top: 370px;
-    left: -95px;
-}
-.slider-dots--fi{
-    top: 470px;
-    left: 95px;
-    .slider-dots__content{
-        transform: translateX(-93%);
-        &::before{
-            content:'';
-            left: auto;
-            right: 0;
-        }
-    }
-}
-.travel {
-    padding: 160px 0 270px;
-    background-image: url(../img/travel-cup.png);
-    background-position: bottom right;
-    background-repeat: no-repeat;
-    .slider-arrows{
-        top: 225px;
-    }
-}
-.travel-slider__top {
-    background-repeat: no-repeat;
-    background-position: top left;
-    min-height: 813px;
-}
-.travel-slider__subtitle {
-    display: flex;
-    justify-content: flex-end;
-    padding: 132px 80px 0 0;
-    margin: 0;
-}
-.subtitle{
-    text-align: right;
-    width: 700px;
-}
-.descr{
-    padding: 32px 0 0 5px;
-}
-.travel-slider__descr {
-    min-height: 320px;
-    background-position: right center;
-    background-repeat: no-repeat;
-    padding: 160px 0px 0px 130px;
-    margin: -230px 0px 0px 0px;
-    .descr__head{
-        position: relative;
-        padding: 0px 80px 0px 0px;
-        img{
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-    }
-}
-.travel-slider__info {
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-}
-.travel-slider__info-item {
-    min-height: 200px;
-    margin-bottom: 66px;
-    position: relative;
-    padding: 0px 0px 0px 40px;
-}
-.travel-slider__info-subtitlewrap{
-    position: absolute;
-    font-size: 18px;
-    line-height: 22px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
-    opacity: 0.5;
-    transform: rotate(-90deg);
-    top: 160px;
-    left: -106px;
-    width: 216px;
-    height: auto;
-    text-align: right;
-    white-space: nowrap;
-}
-.travel-slider__info-subtitle {
-    position: absolute;
-    font-size: 18px;
-    line-height: 22px;
-    letter-spacing: 8px;
-    text-transform: uppercase;
-    opacity: 0.5;
-    transform: rotate(-90deg);
-    top: 95px;
-    left: -106px;
-    width: 216px;
-    height: auto;
-    text-align: right;
-    white-space: nowrap;
-}
-.travel-slider__info-title {
-    font-weight: 800;
-    font-size: 40px;
-    line-height: 36px;
-    text-transform: uppercase;
-    width: 235px;
-    span{
-        display: block;
-        font-weight: 400;
-        text-transform: uppercase;
-        letter-spacing: 6px;
-        text-align: right;
-        line-height: 16px;
-        font-size: 14px;
-        opacity: 0.5;
-        padding: 8px 15px 0 0px;
-    }
-}
-.travel-slider__btn {
-    text-align: center;
-    padding: 10px 0px 0 0px;
-}
+@import "header";
+@import "sport";
+@import "travel";
+@import "relax";
